tests/invalid_scir_h/invalid_missing_boundary_contract.scirh
module invalid.missing_boundary_contract
import sym foreign_api_ping python:foreign_api.ping

fn ping -> opaque<ForeignResult> !opaque
  return foreign_api_ping()
